--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
         <div class="mb-6 text-center">
             <p class="text-lg text-gray-700 mb-6">States and Union Territories Contributing Effectively to SDG3 Goals</p>
         </div>
-        <img src="Fig1a.jpg" alt="India Map SDG3 Progress" class="india-map mx-auto">
+        <img src="Fig1a.jpg" alt="India Map SDG3 Progress" class="india-map mx-auto" width="500" height="375">
 
         <!-- Chart Container -->
         <div class="w-full max-w-4xl mx-auto">
