--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
                 </div>
                 <h3 class="text-2xl font-bold text-green-700 mb-2">Pavan Krishna O</h3>
                 <p class="text-gray-600 mb-4">Registration Number: 21MIS1060</p>
+                <p class="text-gray-600 mb-4">Vellore Institute of Technology - Chennai</p>
             </div>
         </section>
 
@@ -460,7 +461,7 @@
     <footer class="gradient-bg text-white py-12">
         <div class="container mx-auto px-6 text-center">
             <p>© 2024 SDG3 Implementation Analysis - India</p>
-            <p class="mt-2">Developed for the course REUSE for DIGITAL ASSIGNMENt 1 </p>
+            <p class="mt-2">Developed for the course REUSE for DIGITAL ASSIGNMENT 1 </p>
         </div>
     </footer>
 
